resolution bug collapse logement

--- a/kasa/src/styles/styles.css
+++ b/kasa/src/styles/styles.css
@@ -214,6 +214,7 @@
   margin-top: 24px;
   margin-bottom: 0px;
   cursor: pointer;
+  
 }
 
 .collapse-row {
@@ -235,7 +236,21 @@
   height: 52px;
   border-radius: 5px;
 }
+.collapse-list li {
+  max-height: 0;
+  overflow: hidden;
+  animation: expandListItem 4s ease-in-out forwards;
+}
 
+
+@keyframes expandListItem {
+  0% {
+    max-height: 0;
+  }
+  100% {
+    max-height: 500px; 
+  }
+}
 .collapse-text {
   color: #FF6060;
   font-size: 18px !important;
@@ -246,6 +261,7 @@
   line-height: 140%;
   border-radius: 0 0 5px 5px;
   text-align: left;
+  
 }
 
 .collapse-list {
